--- a/public/upload.html
+++ b/public/upload.html
@@ -4,7 +4,8 @@
     </head>
     <body>
         <form action="/upload" method="post" enctype="multipart/form-data">
-            <input type="file" name="file" />
+            <input type="file" name="file" /> <br />
+            <input type="submit" />
         </form>
     </body>
 </html>
