--- a/public/iphone.html
+++ b/public/iphone.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+        <meta name="viewport" content="width=device-width">
         <title>iPhone photo experiment</title>
     </head>
     <body>
