--- a/public/upload.html
+++ b/public/upload.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+        <meta name="viewport" content="width=device-width">
         <title>File upload experiment</title>
     </head>
     <body>
